# ChronixV2

./: CMakeLists.txt  README.md
.github/workflows/: nightly.yml
docs/: lua-api.md  natives.lua  yimmenu_v2.lua
src/: main.cpp
src/core/commands/: Command.hpp  Commands.cpp  Commands.hpp
src/core/frontend/manager/: Category.hpp  Submenu.cpp  Submenu.hpp  UIManager.cpp  UIManager.hpp
src/core/memory/: PatternScanner.hpp
src/core/scripting/: LuaCommands.cpp  LuaCommands.hpp  LuaManager.cpp  LuaManager.hpp  LuaScript.cpp  LuaScript.hpp  LuaUserInterface.cpp  LuaUserInterface.hpp  LuaUtils.hpp
src/core/scripting/libraries/: CommandMgr.cpp  FileMgr.cpp  ImGui.cpp  LuaCommandHandle.hpp  Memory.cpp  Menu.cpp  Notify.cpp  Pointer.cpp  Script.cpp  Util.cpp  Vector3.cpp
src/game/backend/: Players.cpp  ScriptPatches.cpp  ScriptPatches.hpp
src/game/features/network/: SpoofDataHash.cpp
src/game/features/recovery/: CharacterSkills.cpp  RPModifier.cpp
src/game/features/self/: CustomWeapon.cpp  Freecam.cpp  Noclip.cpp  RapidFire.cpp
src/game/features/teleport/: TpToWaypoint.cpp
src/game/frontend/: ESP.cpp  Menu.cpp  Onboarding.cpp
src/game/frontend/items/: CommandItem.cpp  Items.hpp
src/game/frontend/submenus/: Recovery.cpp
src/game/gta/: Entity.cpp  Natives.hpp  RayCast.cpp  ScriptFunction.hpp  Stats.cpp  Stats.hpp
src/game/gta/invoker/: Crossmap.hpp  GenerateNatives.py  natives_gen9.json
src/game/hooks/Network/: HandleScriptedGameEvent.cpp  ReceiveNetMessage.cpp
src/game/pointers/: Pointers.cpp
src/game/scripting/libraries/: Entities.cpp  Event.cpp  Invoker.cpp  NativeDefs.cpp  Network.cpp  Player.cpp  ScriptFunction.cpp  ScriptGlobal.cpp  ScriptLocal.cpp  ScriptPatch.cpp  ScriptPointer.cpp  Scripts.cpp  Stats.cpp  Vehicle.cpp
(+4 files in other folders)
